--- a/практична №1 (1).ipynb
+++ b/практична №1 (1).ipynb
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Вітаю, d! Давай зіграємо у гру?\n"
+      "Вітаю, student! Давай зіграємо у гру!\n"
      ]
     }
    ],
@@ -82,20 +82,20 @@
      "output_type": "stream",
      "text": [
       "Вітаю на першому рівні! Почнімо з простого запитання:\n",
-      " Ти навчаєшся в ІТ СТЕПі?\n",
+      "Ти навчаєшся в ІТ СТЕПі?\n",
       "Варіанти відповідей:\n",
       "1) 'Так('\n",
       "2) 'Ні, я з УКУ'\n",
-      "Значить ти знаєш що таке кон'юнкція, так?\n",
-      "Варіанти відповідей:\n",
-      "1) 'Так'\n",
-      "2) 'Ні'\n",
-      "3) 'Кон'юктивіт?'\n"
+      "Тоді тримай сік\n",
+      "Варіанти вибору:\n",
+      "1) 'Випити'\n",
+      "2) 'Не пити'\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "delay_print(\"Вітаю на першому рівні! Почнімо з простого запитання:\\n Ти навчаєшся в ІТ СТЕПі?\")\n",
+    "delay_print(\"Вітаю на першому рівні! Почнімо з простого запитання:\\nТи навчаєшся в ІТ СТЕПі?\")\n",
     "\n",
     "print(\"Варіанти відповідей:\\n1) 'Так('\\n2) 'Ні, я з УКУ'\")\n",
     "\n",
@@ -123,7 +123,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Молодець\n"
+      "Чому ні?\n",
+      "Назви мені вагому причину!!!\n",
+      "Варіанти відповідей:\n",
+      "1) 'В мене алергія'\n",
+      "2) 'Не хочу'\n",
+      "3) 'Привіт'\n"
      ]
     }
    ],
@@ -131,7 +136,7 @@
     "answers_transformed = [int(i) for i in answers_array]\n",
     "\n",
     "if sum(answers_transformed) == 1:\n",
-    "    answers_array.append(answer)\n",
+    "   \n",
     "    \n",
     "\n",
     "    match answer:\n",
@@ -147,9 +152,8 @@
     "        \n",
     "        case _: \n",
     "            delay_print(\"?????\")\n",
-    "            \n",
+    "            exit(0)\n",
     "else:\n",
-    "     answers_array.append(answer)\n",
     "     \n",
     "    \n",
     "     match answer:\n",
@@ -161,7 +165,7 @@
     "            delay_print(\"Назви мені вагому причину!!!\")\n",
     "            print(\"Варіанти відповідей:\\n1) 'В мене алергія'\\n2) 'Не хочу'\\n3) 'Привіт'\")\n",
     "            answer = input(\"Введіть відповідь: \")\n",
-    "           \n",
+    "            answers_array.append(answer)\n",
     "        \n",
     "        case _: \n",
     "            delay_print(\"?????\")\n",
@@ -178,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Оуууууу, ну тоді тримай водичку :)\n"
+      "Привіт\n"
      ]
     },
     {
@@ -191,9 +195,8 @@
     }
    ],
    "source": [
-    "\n",
     "answers_transformed = [int(i) for i in answers_array]\n",
-    "answers_array.append(answer)\n",
+    "\n",
     "match answer:\n",
     "    case \"1\": \n",
     "        delay_print(\"Оуууууу, ну тоді тримай водичку :)\")\n",
@@ -205,7 +208,7 @@
     "        print(\"Привіт\")\n",
     "        exit(0)\n",
     "    case _: delay_print(\"?????\")\n",
-    "    \n"
+    "exit(0)\n"
    ]
   }
  ],
